# kasl

./: .gitignore  CHANGELOG.md  CNAME  Cargo.toml  README.md  build.rs  install.sh  rellr.json
.github/workflows/: release.yml
docs/: 404.html  api-integrations.html  book.toml  configuration.html  database.html  development.html  features.html  getting-started.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js  troubleshooting.html
docs/commands/: adjust.html  autostart.html  breaks.html  event.html  export.html  index.html  init.html  pauses.html  report.html  sum.html  tag.html  task.html  template.html  update.html  watch.html
docs/development/: contributing.html  style-guide.html
docs/src/: configuration.md  features.md  getting-started.md  troubleshooting.md
docs/src/commands/: autostart.md  breaks.md  pauses.md  report.md  sum.md  task.md  template.md  update.md  watch.md
docs/src/development/: contributing.md  style-guide.md
src/: SUMMARY.md  api-integrations.md  configuration.md  database.md  features.md  getting-started.md  introduction.md  lib.rs  main.rs  troubleshooting.md
src/api/: gitlab.rs  jira.rs  mod.rs  si.rs
src/commands/: adjust.md  adjust.rs  autostart.rs  breaks.rs  event.md  event.rs  export.md  export.rs  index.md  init.md  init.rs  migrations.rs  mod.rs  pauses.rs  report.md  report.rs  sum.rs  tag.md  tag.rs  task.md  task.rs  template.rs  update.rs  watch.rs
src/db/: breaks.rs  db.rs  events.rs  migrations.rs  mod.rs  pauses.rs  tags.rs  tasks.rs  templates.rs  workdays.rs
src/development/: contributing.md
src/libs/: autostart.rs  break.rs  config.rs  daemon.rs  data_storage.rs  db.rs  event.rs  export.rs  formatter.rs  http.rs  mod.rs  monitor.rs  pause.rs  productivity.rs  report.rs  scheduler.rs  secret.rs  summary.rs  task.rs  update.rs  view.rs
src/libs/messages/: display.rs  errors.rs  macros.rs  mod.rs  prompts.rs  success.rs  types.rs
tests/: api_session.rs  autostart.rs  basic_functionality.rs  breaks.rs  commands.rs  commands_simple.rs  config.rs  daemon.rs  daemon_lifecycle.rs  export.rs  formatters.rs  integration_simple.rs  integration_workflows.rs  migrations.rs  monitor.rs  productivity.rs  report.rs  report_functions.rs  secret.rs  short_intervals.rs  tags.rs  tasks_crud.rs  templates.rs  time_adjustment.rs  watch_restart.rs  workdays.rs
tools/: install.sh
