[package]
name = "wflow"
version = "0.0.1"
edition = "2021"
description = "Command line tool to automate work flow"
repository = "https://github.com/lacodda/wflow.git"
authors = ["Kirill Lakhtachev <lahtachev@gmail.com> (https://lacodda.com)"]
readme = "README.md"
license = "MIT"
keywords = ["cli", "tool", "work", "time", "flow"]
categories = ["cli"]

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
dialoguer = "0.11.0"
prettytable-rs = "0.10.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }

[dependencies.windows]
version = "0.52"
features = [
    "Win32_System_Com",
    "Win32_System_TaskScheduler",
    "Win32_System_Ole",
    "Win32_System_Environment",
    "Win32_System_Variant",
    "Win32_Foundation",
]